--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-1.94MB/s(Youtube:不良林), server: 213.183.51.172, port: 9014, type: ss, cipher: aes-256-cfb, password: KnJGad3FqTvjqbaX}
-  - {name: 🇳🇱 荷兰-1.25MB/s(Youtube:不良林), server: 213.183.51.172, port: 9040, type: ss, cipher: aes-256-cfb, password: p9z5BVADH2YFs3MN}
-  - {name: 🇳🇱 荷兰-2.20MB/s(Youtube:不良林), server: 213.183.51.172, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
+  - {name: 🇷🇺 俄罗斯联邦-439.6KB/s(Youtube:不良林), server: 213.183.53.177, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇺🇸 美国-3.09MB/s(Youtube:不良林), server: 38.68.134.71, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇷🇺 俄罗斯联邦-441.9KB/s(Youtube:不良林), server: 213.183.53.202, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
   - {name: 🇷🇺 (已存活1天)俄罗斯联邦-1.08MB/s(Youtube:不良林), server: 213.183.53.207, port: 9061, type: ss, cipher: aes-256-cfb, password: 4R3hUfZ2FHhDmNcP}
-  - {name: 🇷🇺 俄罗斯联邦-689.4KB/s(Youtube:不良林), server: 213.183.53.207, port: 9030, type: ss, cipher: aes-256-cfb, password: GeregetR8cvQHzYr}
-  - {name: 🇺🇸 美国-14.10MB/s(Youtube:不良林), server: hk02.bosaidong.buzz, port: 443, type: vmess, uuid: 96e19c0c-ba2f-47cf-b1d6-efef8f8fbb4d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /JJkuv3, ws-headers: {Host: hk02.bosaidong.buzz}}
-  - {name: 🇺🇸 美国-10.69MB/s(Youtube:不良林), server: hk01.bosaidong.buzz, port: 444, type: vmess, uuid: 96e19c0c-ba2f-47cf-b1d6-efef8f8fbb4d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /JJkuv3, ws-headers: {Host: hk01.bosaidong.buzz}}
-  - {name: 🇺🇸 美国-313.3KB/s(Youtube:不良林), server: 20.222.106.239, port: 80, type: vmess, uuid: 5f405152-88b2-4e5e-9091-b730e65e8983, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.222.106.239}}
-  - {name: 🇺🇸 美国-10.28MB/s(Youtube:不良林), server: 20.243.69.62, port: 80, type: vmess, uuid: 5f405152-88b2-4e5e-9091-b730e65e8983, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.243.69.62}}
-  - {name: 🇺🇸 美国-4.24MB/s(Youtube:不良林), server: 20.243.71.225, port: 80, type: vmess, uuid: 5f405152-88b2-4e5e-9091-b730e65e8983, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.243.71.225}}
+  - {name: 🇷🇺 俄罗斯联邦-414.0KB/s(Youtube:不良林), server: 213.183.53.200, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
+  - {name: 🇳🇱 荷兰-569.6KB/s(Youtube:不良林), server: 213.183.59.229, port: 9024, type: ss, cipher: aes-256-cfb, password: BejrQvtu9sqUeNuZ}
+  - {name: 🇳🇱 荷兰-1.37MB/s(Youtube:不良林), server: 213.183.51.172, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
+  - {name: 🇳🇱 荷兰-1.29MB/s(Youtube:不良林), server: 213.183.51.172, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
+  - {name: 🇳🇱 荷兰-1.82MB/s(Youtube:不良林), server: 213.183.51.172, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
+  - {name: 🇳🇱 荷兰-1.59MB/s(Youtube:不良林), server: 213.183.59.218, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1.94MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.25MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.20MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-439.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-441.9KB/s(Youtube:不良林)
       - 🇷🇺 (已存活1天)俄罗斯联邦-1.08MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-689.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-14.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.24MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-414.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-569.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.37MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.29MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.82MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-1.94MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.25MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.20MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-439.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-441.9KB/s(Youtube:不良林)
       - 🇷🇺 (已存活1天)俄罗斯联邦-1.08MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-689.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-14.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.24MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-414.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-569.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.37MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.29MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.82MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1.94MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.25MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.20MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-439.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-441.9KB/s(Youtube:不良林)
       - 🇷🇺 (已存活1天)俄罗斯联邦-1.08MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-689.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-14.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.24MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-414.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-569.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.37MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.29MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.82MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-1.94MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.25MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.20MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-439.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-441.9KB/s(Youtube:不良林)
       - 🇷🇺 (已存活1天)俄罗斯联邦-1.08MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-689.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-14.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.24MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-414.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-569.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.37MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.29MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.82MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1.94MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.25MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.20MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-439.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-441.9KB/s(Youtube:不良林)
       - 🇷🇺 (已存活1天)俄罗斯联邦-1.08MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-689.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-14.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.24MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-414.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-569.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.37MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.29MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.82MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-1.94MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.25MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.20MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-439.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-441.9KB/s(Youtube:不良林)
       - 🇷🇺 (已存活1天)俄罗斯联邦-1.08MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-689.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-14.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.24MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-414.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-569.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.37MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.29MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.82MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-1.94MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.25MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.20MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-439.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-441.9KB/s(Youtube:不良林)
       - 🇷🇺 (已存活1天)俄罗斯联邦-1.08MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-689.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-14.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.24MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-414.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-569.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.37MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.29MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.82MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
